--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 rocket = "0.5.0"
 calamine = "*"
+bitcoin = "0.29.0"
+reqwest = "*"
+tokio = { version = "1", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
