--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 rocket = "0.5.0"
 calamine = "*"
 bitcoin = "0.29.0"
-reqwest = "*"
+reqwest = { version = "*", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+dotenv = "0.15.0"
